hard-gists/a6a32bd87fdfe5529f0e908ed743f779/run.log
=== Docker Run Log for a6a32bd87fdfe5529f0e908ed743f779 ===
Started at: Mi 29. Okt 19:05:55 CET 2025

[2025-10-29 19:05:55] START: Running container for a6a32bd87fdfe5529f0e908ed743f779
[2025-10-29 19:05:56] SUCCESS: Container ffa2b52f6871706f5734254fe9f40c7e6c4e8f6df2758d1c6b2fb235f3eed6eb started for a6a32bd87fdfe5529f0e908ed743f779
=== Container logs for a6a32bd87fdfe5529f0e908ed743f779 ===
  File "/snippet.py", line 8
    print "Net: " + deploy_file
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for a6a32bd87fdfe5529f0e908ed743f779 ===
[2025-10-29 19:05:58] INFO: Container ffa2b52f6871706f5734254fe9f40c7e6c4e8f6df2758d1c6b2fb235f3eed6eb has stopped
